--- a/.github/workflows/github-action-variable-01.yml
+++ b/.github/workflows/github-action-variable-01.yml
@@ -15,4 +15,9 @@ jobs:
       
     steps:
       - name: "It's Day!"
-        run: echo "Today is $DAY_OF_WEEK!"
+        run: echo "$MESSAGE, Today is $DAY_OF_WEEK!"
+  check-var2:
+    runs-on: ubuntu-latest
+    steps:
+      - name: "It's Day!"
+        run: echo "$MESSAGE, Today is $DAY_OF_WEEK!"
