--- a/.github/workflows/github-action-variable-01.yml
+++ b/.github/workflows/github-action-variable-01.yml
@@ -15,6 +15,7 @@ jobs:
       
     steps:
       - name: "It's Day!"
+        if: ${{env.DAY_OF_WEEK == 'Thursday'}}
         run: echo "$MESSAGE, Today is $DAY_OF_WEEK!"
   check-var2:
     runs-on: ubuntu-latest
