--- a/.github/workflows/github-action-checkout-01.yml
+++ b/.github/workflows/github-action-checkout-01.yml
@@ -11,4 +11,4 @@ jobs:
         run: ls -al
       - name: github actions checkout
         uses: actions/checkout@v4
-      - run : ls-al
+        run : ls-al
