--- a/.github/workflows/github-action-checkout-01.yml
+++ b/.github/workflows/github-action-checkout-01.yml
@@ -14,4 +14,4 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: checkout-dir
-      - run : ls -al checkout-dir
+      - run : ls -al 
