--- a/.github/workflows/github-action-checkout-01.yml
+++ b/.github/workflows/github-action-checkout-01.yml
@@ -14,4 +14,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: checkout-dir
+      - name: github actions checkout
+        uses: actions/checkout@v4
+        with:
+          repository: actions/checkout
+          path: other-repo
       - run : ls -al 
