--- a/.github/workflows/github-action-checkout-01.yml
+++ b/.github/workflows/github-action-checkout-01.yml
@@ -1,7 +1,7 @@
 name: Test Github actions checkout-01
 run-name: Run Github actions checkout
 on:
-  push
+  workflow-dispatch
 
 jobs:
   checkout:
